--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ plugins {
 }
 
 android {
-    namespace 'com.squbix.wifi2'
-    compileSdk 32
+    namespace 'com.device.wifip2p'
+    compileSdk 34
 
     defaultConfig {
-        applicationId "com.squbix.wifi2"
-        minSdk 21
-        targetSdk 32
+        applicationId "com.device.wifip2p"
+        minSdk 26
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -33,11 +33,16 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.camera:camera-core:1.4.0-beta01"
+    implementation "androidx.camera:camera-camera2:1.4.0-beta01"
+    implementation "androidx.camera:camera-lifecycle:1.4.0-beta01"
+    implementation "androidx.camera:camera-video:1.4.0-beta01"
+    implementation "androidx.camera:camera-view:1.4.0-beta01"
+    implementation "androidx.camera:camera-extensions:1.4.0-beta01"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
